--- a/style.css
+++ b/style.css
@@ -35,3 +35,13 @@ nav .navbar{
   font-size: 20px;
   font-weight: 700;
 }
+.landing{
+  background-image: url("../images/pizza.jpg");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment:fixed;
+  padding-bottom: 20px;
+  position: relative;
+  overflow-x: hidden;
+}
