--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,38 @@
   padding-bottom: 20px;
   font-weight: bolder;
 }
+.col-md-4{
+  border-radius: 10%;
+  padding: 10px;
+}
+#about-us{
+  min-height: 70vh;
+  align-items: center;
+
+}
+.about-pic {
+  background-color: #ffa500;
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-left: 0px;
+}
+#about-us .content{
+  padding: 65px 50px 85px;
+  width: 100%;
+  background-color: #ffa500;
+  float:right;
+  text-align: justify;
+  overflow-x: hidden;
+}
+.d-flex{
+  display: flex !important;
+}
+.arrow
+{
+  position: relative;
+  left: 50%;
+  top: 90%;
+  margin-left:-20px;
+
+}
